Update-Images-In-Folder

--- a/styles/Blockchain/Industries.module.css
+++ b/styles/Blockchain/Industries.module.css
@@ -1,5 +1,5 @@
 .bodyContainer {
-    background: url("https://d2ms8rpfqc4h24.cloudfront.net/Partner_with_Top_Custom_Software_Development_Company_8c2a523bfe.jpg");
+    background: url('../../pages/media/Blockchain-Images/blockchain-image-7.jpg');
     background-position-x: right;
     background-position-y: top;
     background-size: cover;
