--- a/styles/Blockchain/Section1.module.css
+++ b/styles/Blockchain/Section1.module.css
@@ -1,5 +1,5 @@
 .bodyContainer {
-    background: url("https://www.acldigital.com/sites/default/files/2022-05/Blockchain%20Banner-100_0.jpg");
+    background: url('../../pages/media/Blockchain-Images/blockchain-image-1.jpg');
     background-position-x: right;
     background-position-y: top;
     background-size: cover;
