--- a/styles/WhoWeAre/OurPeople.module.css
+++ b/styles/WhoWeAre/OurPeople.module.css
@@ -1,5 +1,5 @@
 .bodyContainer {
-    background: url("https://s7ap1.scene7.com/is/image/TCSCOMprod/leadership-banner?wid=1900&hei=1069&dpr=off");
+    background: url('../../pages/media/WhoWeAre-Images/WhoWeAre-image-6.jpeg');
     background-position-x: right;
     background-position-y: top;
     background-size: cover;
