--- a/styles/Turing/IntroSection.module.css
+++ b/styles/Turing/IntroSection.module.css
@@ -48,9 +48,13 @@
 
 @media (max-width: 991px) {
     .imgStyle {
-        width: 50%;
-        height: 50%;
+        width: 80%;
+        height: 80%;
         margin: auto;
+    }
+
+    .hideAfterLGScrn{
+        display: none;
     }
 
     .formStyleBeforeLGScrn{
