--- a/styles/Homepage/CustomersSlider.module.css
+++ b/styles/Homepage/CustomersSlider.module.css
@@ -1,15 +1,14 @@
 .slide {
-    height: 104px;
     width: 192px;
     display: grid;
-    place-items: center;
+    height: 104px;
     margin-right: 32px;
     perspective: 100px;
-    border: 24px solid rgb(255, 255, 255);
-    box-shadow: rgb(0 8 36 / 5%) 0px 8px 16px;
-    background: center center / contain no-repeat rgb(255, 255, 255);
     border-radius: 8px;
-    padding: 2px;
+    place-items: center;
+    /* border: 10px solid rgb(255, 255, 255);
+    box-shadow: rgb(0 8 36 / 5%) 0px 8px 16px;
+    background: center center / contain no-repeat rgb(255, 255, 255); */
 }
 
 .sectionTitle {
@@ -17,17 +16,17 @@
 }
 
 .ContainerWidth {
-    max-width: 1550px;
     margin: 0 auto;
+    max-width: 1550px;
 }
 
 .imageSlider {
-    display: grid;
-    place-items: center;
-    position: relative;
-    overflow: hidden;
-    height: 250px;
     width: 100%;
+    height: 250px;
+    display: grid;
+    overflow: hidden;
+    position: relative;
+    place-items: center;
 }
 
 .imageSliderTrack {
@@ -43,13 +42,13 @@
 }
 
 .imageSlider::before {
-    left: 0;
     top: 0;
+    left: 0;
 }
 
 .imageSlider::after {
-    right: 0;
     top: 0;
+    right: 0;
     background: linear-gradient(to left, rgba(255, 255, 255, 1)0%, rgba(255, 255, 255, 0)100%);
 
 }
