--- a/styles/Homepage/CustomersSlider.module.css
+++ b/styles/Homepage/CustomersSlider.module.css
@@ -1,16 +1,3 @@
-.slide {
-    width: 192px;
-    display: grid;
-    height: 104px;
-    margin-right: 32px;
-    perspective: 100px;
-    border-radius: 8px;
-    place-items: center;
-    /* border: 10px solid rgb(255, 255, 255);
-    box-shadow: rgb(0 8 36 / 5%) 0px 8px 16px;
-    background: center center / contain no-repeat rgb(255, 255, 255); */
-}
-
 .sectionTitle {
     font-size: calc(25px + 1.25vw);
 }
@@ -22,197 +9,35 @@
 
 .imageSlider {
     width: 100%;
-    height: 250px;
+    height: 150px;
     display: grid;
     overflow: hidden;
     position: relative;
     place-items: center;
 }
 
-.imageSliderTrack {
+.imageSlider .imageSliderTrack {
+    animation: scroll 10s linear infinite;
     display: flex;
-    width: calc(200px*12);
-    animation: play 30s linear infinite;
+    width: calc(250px*14);
 }
 
-.antiImageSliderTrack {
-    display: flex;
-    width: calc(200px*12);
-    animation: antiPlay 30s linear infinite;
+.imageSlider .slide {
+    width: 100%;
+    display: grid;
+    height: 104px;
+    margin-right: 32px;
+    perspective: 100px;
+    border-radius: 8px;
+    place-items: center;
 }
 
-.imageSlider::before {
-    top: 0;
-    left: 0;
-}
-
-.imageSlider::after {
-    top: 0;
-    right: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 1)0%, rgba(255, 255, 255, 0)100%);
-
-}
-
-@media (min-width: 991px) {
-    .ContainerWidth {
-        padding: 0 30px;
-    }
-}
-
-@media (min-width: 992px) {
-    .ContainerWidth {
-        padding: 0 60px;
-    }
-}
-
-@keyframes play {
+@keyframes scroll {
     0% {
-        transform: translateX(calc(250px*2.5));
+        transform: translateX(0);
     }
 
     100% {
-        transform: translateX(calc(-250px*10));
-    }
-}
-
-@keyframes antiPlay {
-    0% {
-        transform: translateX(calc(-250px*9));
-    }
-
-    100% {
-        transform: translateX(calc(250px*2));
-    }
-}
-
-@media (min-width: 600px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*3));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*3));
-        }
-    }
-}
-
-@media (min-width: 800px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*3));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*3));
-        }
-    }
-}
-
-@media (min-width: 1000px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*4));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*4));
-        }
-    }
-}
-
-@media (min-width: 1200px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*5));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*5));
-        }
-    }
-}
-
-@media (min-width: 1400px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*6));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*6));
-        }
-    }
-}
-
-@media (min-width: 1600px) {
-    @keyframes play {
-        0% {
-            transform: translateX(calc(250px*7));
-        }
-
-        100% {
-            transform: translateX(calc(-250px*10));
-        }
-    }
-
-    @keyframes antiPlay {
-        0% {
-            transform: translateX(calc(-250px*9));
-        }
-
-        100% {
-            transform: translateX(calc(250px*7));
-        }
+        transform: translateX(calc(-250px*7));
     }
 }
