--- a/styles/WhoWeAre/WhoWeAre.module.css
+++ b/styles/WhoWeAre/WhoWeAre.module.css
@@ -15,15 +15,28 @@
     }
 }
 
+@media (max-width: 767px) {
+    .Section1{
+        text-align: center;
+    }
+}
+
 .mainHeading {
-    font-size: calc(48px + 1.60vw);
+    font-size: calc(48px + 1.50vw);
+}
+
+.mainHeading2 {
+    font-size: calc(30px + 1.50vw);
 }
 
 .sectionTitle {
-    font-size: calc(28px + 1.25vw);
+    font-size: calc(25.5px + 1.25vw);
+    line-height: 1.4;
+    letter-spacing: -1.5px;
 }
 
 .sectionBody {
-    line-height: 1.5;
     font-size: 1.125rem;
+    line-height: 1.7;
+    letter-spacing: -0.2px;
 }
