--- a/styles/WhoWeAre/WhoWeAre.module.css
+++ b/styles/WhoWeAre/WhoWeAre.module.css
@@ -3,21 +3,31 @@
     max-width: 1550px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 992px) {
     .ContainerWidth {
         padding: 0 30px;
     }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 991px) {
     .ContainerWidth {
         padding: 0 70px;
     }
 }
 
 @media (max-width: 767px) {
-    .Section1{
+    .Section1 {
         text-align: center;
+    }
+}
+
+.testimonialImg {
+    width: 90%;
+}
+
+@media (min-width: 991px) {
+    .testimonialImg {
+        width: 80%;
     }
 }
 
@@ -41,3 +51,27 @@
     letter-spacing: -0.2px;
 }
 
+
+.videoBackground {
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .videoBackground .video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+  }
+  
+  .content {
+    position: relative;
+    z-index: 1;
+  }
