--- a/styles/WhoWeAre/WhoWeAre.module.css
+++ b/styles/WhoWeAre/WhoWeAre.module.css
@@ -96,6 +96,10 @@
         line-height: 1.3;
         /* Adjust the font size as needed */
     }
+
+    .customFont{
+        font-size: 12px;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
@@ -112,6 +116,10 @@
         line-height: 1.3;
         /* Adjust the font size as needed */
     }
+
+    .customFont{
+        font-size: 13px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -127,5 +135,9 @@
         font-size: 2.5rem;
         line-height: 1.3;
         /* Adjust the font size as needed */
+    }
+
+    .customFont{
+        font-size: 14px;
     }
 }
