--- a/styles/Blockchain/Section1.module.css
+++ b/styles/Blockchain/Section1.module.css
@@ -1,4 +1,4 @@
-.bodyContainer {
+/* .bodyContainer {
     background: url('../../pages/media/Blockchain-Images/blockchain-image-1.jpg');
     background-position-x: right;
     background-position-y: top;
@@ -6,7 +6,7 @@
     padding-bottom: 10px;
     padding-top: 10px;
     position: relative;
-}
+} */
 
 .sectionTitle {
     font-size: calc(30px + 1.25vw);
